--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3178EE</color>
-    <color name="colorPrimaryDark">#2E58EB</color>
+    <color name="colorPrimaryDark">#346df2</color>
     <color name="colorAccent">#e84e52</color>
 
     <color name="color_white">#FFFFFF</color>
@@ -12,4 +12,5 @@
     <color name="color_appRed">#e92f32</color>
     <color name="color_appBlue">#346df2</color>
     <color name="color_backGrey">#f6f6f6</color>
+    <color name="color_blue">#2a52ef</color>
 </resources>
