--- a/app/src/main/res/layout/item_rv_account.xml
+++ b/app/src/main/res/layout/item_rv_account.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="wrap_content"
     android:background="@color/color_backGrey">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="11dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginLeft="11dp"
+        android:layout_marginRight="11dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:background="@drawable/shape_radius5_white">
         <ImageView
             android:id="@+id/iv_head"
-            android:layout_width="63dp"
-            android:layout_height="63dp"
+            android:layout_width="61dp"
+            android:layout_height="61dp"
             android:layout_marginLeft="11dp"
             android:src="@mipmap/icon_accoount_default"/>
         <LinearLayout
@@ -27,13 +29,14 @@
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="张滨华"/>
+                android:text="张滨华"
+                android:textColor="@color/color_black"/>
             <TextView
                 android:id="@+id/tv_commission"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="总提成 ￥1000"
-                android:layout_marginTop="5dp"/>
+                android:layout_marginTop="3dp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
