--- a/app/src/main/res/layout/layout_topbar.xml
+++ b/app/src/main/res/layout/layout_topbar.xml
@@ -22,8 +22,9 @@
         android:text=""/>
     <TextView
         android:id="@+id/tv_topbar_right"
-        android:layout_width="50dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:minWidth="50dp"
         android:layout_alignParentRight="true"
         android:gravity="center"
         android:textColor="@color/color_white"
