--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.zuoyun.pintuan.MainActivity">
+    tools:context="com.example.zuoyun.pintuan.Main2Activity">
 
     <Button
         android:layout_width="wrap_content"
